agent/static/agent/css/custom.css
.home-image{
    height: 400px;
}

.product-image {
    height: 300px;
}

.product-image img {
    height: 100%;
}

.product-info-wrapper {
     background: #fadedf;
     padding: 10px 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-decoration: none;
     color: #000;
     font-size: 16px;
}

.product-info-wrapper:active{
    color: #000;
}

.quantity-container{
    display: grid;
    grid-template-columns: 7fr 1fr 1fr;
    column-gap: 5px;
}

#minus-quantity, #plus-quantity {
    border: 0;
    padding: 5px;
    background:#2b80fb;
    color: #fff;
    font-size: 16px;
    border-radius: 5px;
    width: 40px;
    outline: 0;
}

.quantity-btn-disabled {
    background: #43b5fc !important;
}

